<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/oneLineStudentLayout"
    android:layout_width="match_parent"
    android:layout_height="68dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_student"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.9"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/ID"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginLeft="8dp" />

            <TextView
                android:id="@+id/tv_studname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_studsurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="75dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/surname"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tv_id"
                app:layout_constraintStart_toEndOf="@+id/tv_studname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_studage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/age"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tv_id"
                app:layout_constraintStart_toEndOf="@+id/tv_studsurname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_studparentname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/parentName"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_studname"
                app:layout_constraintTop_toBottomOf="@+id/tv_studname" />

            <TextView
                android:id="@+id/tv_studparentphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cuprum"
                android:text="@string/ParentPhone"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_studparentname"
                app:layout_constraintTop_toTopOf="@+id/tv_studparentname"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>