<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSchedule">

    <EditText
        android:id="@+id/et_Schedule_Time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/cuprum"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Day_schedule" />

    <Button
        android:id="@+id/btn_cancel_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Schedule_Time" />

    <Button
        android:id="@+id/btn_ok_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cuprum"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_schedule" />

    <Spinner
        android:id="@+id/spinner_Student_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Students"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_Day_schedule"
        app:layout_constraintStart_toStartOf="@+id/spinner_Day_schedule"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_Day_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/Students"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Student_schedule" />
</androidx.constraintlayout.widget.ConstraintLayout>